--- a/i3status.conf
+++ b/i3status.conf
@@ -9,6 +9,7 @@
 general {
         colors = true
         interval = 5
+	separator = " | "
 }
 
 #order += "ipv6"
@@ -32,6 +33,12 @@ ethernet _first_ {
 
 battery all {
         format = "%status %percentage %remaining"
+	format_down = ""
+	status_chr = "充電"
+	status_bat = "電池"
+	status_unk = "未定義"
+	status_full = "充電済み"
+	low_threshold = 20
 }
 
 disk "/" {
@@ -45,9 +52,9 @@ load {
 memory {
         format = "%used"
         threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+        format_degraded = "ラム < %available"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "%Y年%m月%d日 %H:%M:%S "
 }
