--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,13 +1,13 @@
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
-    #info title
+    info title
     #info underline
 
     #info "OS" distro
-    info "Host" model
+    #info "Host" model
     info "Kernel" kernel
-    #info "Uptime" uptime
+    info "Uptime" uptime
     #info "Packages" packages
     info "Shell" shell
     #info "Resolution" resolution
@@ -19,13 +19,13 @@ print_info() {
     #info "Terminal" term
     #info "Terminal Font" term_font
     info "CPU" cpu
-    info "GPU" gpu
-    info "RAM" memory
+    #info "GPU" gpu
+    info "Memory" memory
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
-    # info "Disk" disk
-    # info "Battery" battery
+    info "Disk" disk
+    info "Battery" battery
     # info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
@@ -249,7 +249,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="off"
+cpu_temp=""
 
 
 # GPU
@@ -760,7 +760,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="Ubuntu_small"
+ascii_distro="POP_OS_small"
 
 # Ascii Colors
 #
