--- a/sway/config
+++ b/sway/config
@@ -7,7 +7,7 @@
 
 	set $gnome-schema org.gnome.desktop.interface
 	exec_always {
-		gsettings set $gnome-schema gtk-theme 'ChromeOS-light-compact'
+		gsettings set $gnome-schema gtk-theme 'arkham-gtk-theme-master'
 		gsettings set $gnome-schema icon-theme 'Newaita'
 		gsettings set $gnome-schema cursor-theme 'retrosmart-xcursor-black'
 	}
@@ -53,6 +53,20 @@ exec swayidle -w \
 	floating_modifier $mod normal
 	bindsym $mod+Shift+e exec swaynag -t warning -m '終了 WM' -b 'はい' 'swaymsg exit'
 
+	bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+	bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+	bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+	bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+	
+	bindsym XF86MonBrightnessUp exec --no-startup-id sudo brightnessctl set 5%+
+	bindsym XF86MonBrightnessDown exec --no-startup-id sudo brightnessctl set 5%-
+	bindsym Scroll_Lock exec --no-startup-id sudo brightnessctl set 5
+	bindsym Pause exec --no-startup-id sudo brightnessctl set 3000
+	
+	bindsym F9 exec bluetoothctl disconnect
+	bindsym F10 exec bluetoothctl connect 1C:52:16:1C:10:EF
+
+# Movement
 	bindsym $mod+$left focus left
 	bindsym $mod+$down focus down
 	bindsym $mod+$up focus up
